--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,20 @@
     tools:context="com.nexdev.enyason.jan.HomeActivity">
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tool_bar_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title="Courses Enrolled"></android.support.v7.widget.Toolbar>
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/tool_bar_home"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark"-->
+        <!--app:title="Courses Enrolled"></android.support.v7.widget.Toolbar>-->
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
+        android:text="Home" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,6 +31,7 @@
 
         <android.support.design.widget.BottomNavigationView
             android:layout_width="match_parent"
+            android:id="@+id/bottom_navigation_view_home"
             android:layout_height="match_parent"
             app:menu="@menu/bottom_navigation_menu">
 
