--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -7,52 +7,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.nexdev.enyason.jan.LandingActivity">
 
     <ImageView
-        android:id="@+id/image_view_jan_logo"
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/jan_logo" />
+        android:src="@drawable/landi" />
+
+    <RelativeLayout
+
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout_one"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="30dp">
+
+
+        <TextView
+            android:id="@+id/tv_land_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="JAN Offers"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tv_land_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_land_one"
+            android:text="Capacity Building Courses"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:fontFamily="c"
+            android:textStyle="bold" />
+
+
+    </RelativeLayout>
 
 
     <LinearLayout
-        android:layout_marginTop="70dp"
-        android:layout_below="@id/image_view_jan_logo"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
+        android:id="@+id/linearLayout_one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
-        <TextView
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-medium"
-            android:text="JAN Offers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:onClick="goToSignInPage"
+            android:text="Sign In"
+            android:textAllCaps="false" />
 
-        <TextView
-            android:textSize="15sp"
-            android:text="Capacity Building Courses"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:onClick="goToSignUpPage"
+            android:text="Enroll Today"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite" />
 
 
     </LinearLayout>
-
-
-    <Button
-        android:layout_marginBottom="50dp"
-        android:onClick="goToSignUpPage"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:text="Enroll Today"
-        android:textAllCaps="false"
-        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
