--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,9 +29,9 @@
 
             <ImageView
                 android:layout_marginBottom="20dp"
-                android:layout_width="70dp"
+                android:layout_width="100dp"
                 android:src="@drawable/jan_logo"
-                android:layout_height="70dp" />
+                android:layout_height="80dp" />
 
 
             <TextView
@@ -75,9 +75,11 @@
 
 
             <Button
-                android:layout_margin="5dp"
+                android:layout_margin="10dp"
                 android:id="@+id/btn_sign_up"
+                android:background="@color/colorPrimary"
                 android:text="Sign Up"
+                android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
