--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/landi" />
+        android:src="@drawable/edu" />
 
     <RelativeLayout
 
@@ -72,7 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
+            android:background="@color/colorPrimary"
             android:onClick="goToSignUpPage"
             android:text="Enroll Today"
             android:textAllCaps="false"
