--- a/app/src/main/res/layout/activity_mentor.xml
+++ b/app/src/main/res/layout/activity_mentor.xml
@@ -17,43 +17,89 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/profile_image"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+            <LinearLayout
+                android:id="@+id/linearLayout_mentor"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="100dp"
+                android:orientation="vertical"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="120dp"
-                android:src="@drawable/enya"
-                app:civ_border_color="#FF000000"
-                app:civ_border_width="2dp" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Your Mentor"
+                    android:textStyle="bold"
+                    android:textSize="22sp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_height="wrap_content" />
+
+
+                <TextView
+                    android:textSize="16sp"
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
+                    android:text="@string/read_mentor"
+                    android:layout_height="wrap_content" />
+
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image"
+                    android:layout_width="96dp"
+                    android:layout_margin="5dp"
+                    android:layout_height="96dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/enya"
+                    app:civ_border_color="#FF000000"
+                    app:civ_border_width="2dp" />
+
+            </LinearLayout>
+
+
 
             <LinearLayout
-                android:layout_centerInParent="true"
+                android:id="@+id/linearLayout_about_mentor"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_below="@id/profile_image"
+                android:layout_below="@id/linearLayout_mentor"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textSize="20sp"
+                    android:layout_margin="5dp"
                     android:layout_height="wrap_content"
-                    android:text="Enya Emmanuel" />
+                    android:text="ENYASON" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:text="University of Uyo" />
+                    android:text="@string/about_mentor" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="08188837623" />
 
             </LinearLayout>
+
+
+
+            <Button
+                android:onClick="messageMentor"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/linearLayout_about_mentor"
+                android:textColor="@color/colorWhite"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:text="Start Messaging"
+                android:textStyle="bold"
+                android:layout_height="wrap_content" />
 
 
         </RelativeLayout>
