--- a/app/src/main/res/layout/fragment_enrolled_courses.xml
+++ b/app/src/main/res/layout/fragment_enrolled_courses.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-
-
-
-    <android.support.v7.widget.Toolbar
-    android:id="@+id/tool_bar_home"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    app:title="Courses Enrolled"></android.support.v7.widget.Toolbar>
-
-
-    <android.support.v7.widget.RecyclerView
-    android:layout_below="@id/tool_bar_home"
-    android:id="@+id/recycler_view_enrolled_courses"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool_bar_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:title="Courses Enrolled"></android.support.v7.widget.Toolbar>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_enrolled_courses"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tool_bar_home">
+
+    </android.support.v7.widget.RecyclerView>>
+
+    <TextView
+        android:id="@+id/tv_empty_state"
+        android:visibility="invisible"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:text="No Courses Enrolled"
+        android:layout_height="wrap_content" />
 
     <ProgressBar
         android:id="@+id/pb_enrolled_courses"
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
