--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <item
-        android:title="See Mentor"
+        android:icon="@drawable/ic_user"
+        android:orderInCategory="1"
+        app:showAsAction="always|withText"
+        android:title="Mentor"
         android:id="@+id/menu_mentor"/>
 
 </menu>
